--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
 mcp[cli]
-ftf-cli @ git+https://github.com/Facets-cloud/control-plane-python-sdk.git
+swagger_client @ git+https://github.com/Facets-cloud/control-plane-python-sdk.git
 
