--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,4 +7,5 @@ requires-python = ">=3.12"
 dependencies = [
     "mcp[cli]>=1.6.0",
     "httpx>=0.25.0",
+    "swagger_client @ git+https://github.com/Facets-cloud/control-plane-python-sdk.git",
 ]
