--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,4 +8,5 @@ dependencies = [
     "mcp[cli]>=1.6.0",
     "httpx>=0.25.0",
     "swagger_client @ git+https://github.com/Facets-cloud/control-plane-python-sdk.git",
+    "pydantic~=2.11.2",
 ]
