--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "mcp[cli]>=1.6.0",
     "httpx>=0.25.0",
-    "facets-control-plane-sdk",
+    "facets-control-plane-sdk~=0.1.3",
     "pydantic~=2.11.2",
     "jsonschema~=4.23.0",
 ]
